Margin/Padding fixes - Wrap project archive descriptions in paragraph - Add additional margin below header - Clean up content marign/padding in portfolio and project
Close #57

--- a/scss/_archive.scss
+++ b/scss/_archive.scss
@@ -26,6 +26,8 @@
 
 			.entry-header{
 
+                margin-bottom: 1.5em;
+
 				.post-thumbnail{
 					height: 120px;
 					flex: 0 0 120px;
@@ -58,7 +60,7 @@
 
 					.entry-title{
 						font-size: 1.25em;
-					}
+                    }
 
 					@media screen and (max-width: $break-medium) {
 						.entry-super-title{
@@ -70,7 +72,7 @@
 						}
 					}
 
-				}
+                }
 
 			}
 			
