--- a/scss/main.scss
+++ b/scss/main.scss
@@ -236,27 +236,34 @@ header.site-header {
 
 
 .single-portfolio{
-	.swiper-container{
-		.swiper-slide{
-			*:first-child{
-				position: relative;
-				display: block;
-				width: 100%;
-				height: 650px;
-				max-height: 500px;
-
-				*{
-					position: absolute;
-					top: 50%;
-					left: 50%;
-					transform: translate(-50%, -50%);
-					display:block;
-					width: auto;
-					height: 100%;
-				}
-			}
-		}
-	}
+    #page{
+        #primary{
+            .entry-content{
+                margin-top: 3em;
+                .swiper-container{
+                    .swiper-slide{
+                        *:first-child{
+                            position: relative;
+                            display: block;
+                            width: 100%;
+                            height: 650px;
+                            max-height: 500px;
+        
+                            *{
+                                position: absolute;
+                                top: 50%;
+                                left: 50%;
+                                transform: translate(-50%, -50%);
+                                display:block;
+                                width: auto;
+                                height: 100%;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 .single-post{
@@ -298,7 +305,7 @@ header.site-header {
 				grid-column-start: 1;
 				grid-column-end: -1;
 				padding: 1.5em 0;
-				padding: 1.5em 1em 1.5em 2em;
+				padding: 1.5em 1em;
 				font-size: 1.5em;
 			}
 
@@ -364,10 +371,6 @@ header.site-header {
 					}
 				}
 			}
-		}
-
-		#secondary{
-			margin-top: 4em;
 		}
 	}
 }
